2009-03-21  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs:
	* Gui/NewCSharpExpressionFinder.cs:
	* Gui/NewOverrideCompletionData.cs:
	* Gui/EventCreationCompletionData.cs:
	* Gui/NRefactoryParameterDataProvider.cs: Fixed compilation
	  error.

2009-03-20  Michael Hutchinson  <mhutchinson@novell.com>

	* templates/GtkSharp2Project.xpt.xml: Don't require specific
	  GTK# versions.

2009-03-19  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs:
	* Gui/CSharpTextEditorCompletion.cs: Track API changes.

	* Gui/CSharpTextEditorIndentation.cs: changed naming.

2009-03-17  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/CSharpTextEditorIndentation.cs: Fix build.

2009-03-17  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorIndentation.cs: Fixed caret end pos.

2009-03-17  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorIndentation.cs:
	* FormattingStrategy/CSharpIndentEngine.cs: Added auto string
	  concat when return is hit inside a string.

2009-03-17  Mike Krüger  <mkrueger@novell.com>

	* Parser/NRefactoryParser.cs: Renamed method.

2009-03-17  Mike Krüger  <mkrueger@novell.com>

	* Parser/NRefactoryParser.cs: fixed 'Bug 485783 - Class/method
	  navigation bar doesn't honor "Define symbols:" project
	  setting when parsing file'.

2009-03-17  Mike Krüger  <mkrueger@novell.com>

	* Parser/CodeGenerator.cs:
	* Parser/NRefactoryParser.cs: Track API changes.

2009-03-17  Mike Krüger  <mkrueger@novell.com>

	* Parser/FindMemberAstVisitor.cs: fixed 'Bug 485610 - Can't
	  rename a variable'.

2009-03-16  Mike Krüger  <mkrueger@novell.com>

	* FormattingStrategy/CSharpFormattingStyleDefinition.xml:
	  Added option categories.

2009-03-16  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: Added new code completion
	  context (local variable naming proposal).

2009-03-16  Mike Krüger  <mkrueger@novell.com>

	* FormattingStrategy/CSharpFormattingStyleDefinition.xml: